<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_api" >
        <EditTextPreference 
            	android:title="@string/pref_api_path" 
            	android:summary="@string/pref_api_path_summary" 
            	android:key="prefApiPath"
            	android:defaultValue=""/>
        
        <EditTextPreference 
            	android:title="@string/pref_api_username"
            	android:key="prefUsername"
            	android:defaultValue=""/>
        
        <EditTextPreference 
            	android:title="@string/pref_api_password"
   				android:inputType="textPassword"
            	android:key="prefPassword"
            	android:defaultValue=""/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_about" >
        <Preference 
        android:key="about"   
        android:title="@string/about_text">         
    	</Preference>
    </PreferenceCategory>

</PreferenceScreen>